# projeto_rodrigo

./: .env  package-lock.json  package.json  schema.json
public/img/: background_login.avif  logo.avif
src/: App.css  App.jsx  NavigationContext.jsx  Var.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/entities/: categoria.rs  cliente.rs  endereco.rs  entrega.rs  fornecedor.rs  item_pedido.rs  item_produto.rs  mod.rs  movimentacao.rs  pedido.rs  pedido_recorrente.rs  pedidos_mensais.rs  pedidos_por_intervalo.rs  pedidos_por_periodo.rs  pedidos_semana_mensal.rs  pedidos_semanais.rs  produto.rs  user.rs
src-tauri/src/database/traits/: crudable.rs  mod.rs  pedidos_recorrentes.rs
src-tauri/src/utilities/: mod.rs
src/components/AdressCard/: AdressCard.css  AdressCard.jsx
src/components/AutoCompletePessoa/: AutoCompleteCliente.jsx  AutoCompletePessoa.css  AutocompleteFornecedor.jsx
src/components/AutoCompleteProdutos/: AutoCompleteProdutos.css  AutoCompleteProdutos.jsx
src/components/CardClientes/: CardClientes.css  CardClientes.jsx  CardFornecedor.jsx
src/components/CardProdutos/: CardProdutos.css  CardProdutos.jsx
src/components/CardUpdatePrecos/: CardUpdatePrecos.css  CardUptatePrecos.jsx
src/components/Estoque/: Estoque.css  (+2 more)
src/frontend/: utils.js
src/modals/: CadastroCategoria.jsx  CadastroCliente.jsx  CadastroEnderecos.jsx  CadastroFornecedor.jsx  CadastroPedidos.jsx  CadastroProdutos.jsx  Modal.css  Modal.jsx  UpdateCliente.jsx  UpdateFornecedor.jsx
(+25 files in other folders)
